--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <div class="d-flex flex-row justify-content-center justify-content-md-start" style="margin-top: 30px;">
               <a href="https://t.me/BASEBASEPORTAL"
                 class="btn btn-launch me-2" target="_blank"><span>TELEGRAM</span></a>
-              <a href="https://x.com/BASEBASE_PORTAL" class="btn btn-launch"
+              <a href="https://x.com/BASExBASED" class="btn btn-launch"
                 target="_blank">X</a>
             </div>
             <div style="display: flex;justify-content: space-between;margin-top: 30px;">
@@ -809,7 +809,7 @@
                     <a href="https://t.me/BASEBASEPORTAL" class="text-decoration-none me-3" target="_blank">
                       <img src="asset/assets/icon/telegram.png" class="social" alt="Telegram">
                     </a>
-                    <a href="https://x.com/BASEBASE_PORTAL" class="text-decoration-none me-3" target="_blank">
+                    <a href="https://x.com/BASExBASED" class="text-decoration-none me-3" target="_blank">
                       <img src="asset/assets/icon/twitter.png" class="social" alt="Twitter">
                     </a>
                     <a href="https://medium.com/" class="text-decoration-none me-3"
