--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               <h4 class="my-0" i18n="header.title3">Name: BASE²</h4>
               <h4 class="my-0" i18n="header.title3">Symbol: BASE²</h4>
               <h4 class="my-0" i18n="header.title3">Total supply: 1,000,000,000</h4>
-              <h4 class="my-0" i18n="header.title3">Address: COMING SOON<br>
+              <h4 class="my-0" i18n="header.title3">Address: 0xe8d4e1c21df1d1c97adaeccc4922a0173113e7ac<br>
 
                 <br><br>
 
@@ -243,7 +243,7 @@
                   data-aos="flip-down" data-aos-duration="3000">
                   <div class="d-grid gap-2">
                     <h2 class="my-0 f-col">Contract Address</h2>
-                    <h6 class="my-0">...</h6>
+                    <h6 class="my-0">0xe8d4e1c21df1d1c97adaeccc4922a0173113e7ac</h6>
                   </div>
                 </div>
               </div>
